--- a/frontend/deployment.yaml
+++ b/frontend/deployment.yaml
@@ -23,7 +23,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend-app-service
+  name: frontend-app-jobify-service
 spec:
   selector:
     app: frontend-app-jobify 
