--- a/frontend/deployment.yaml
+++ b/frontend/deployment.yaml
@@ -32,6 +32,6 @@ spec:
       port: 3000
       targetPort: 3000
   type: LoadBalancer # Use the appropriate service type for your environment
-  loadBalancerIP: 35.192.187.119
+  loadBalancerIP: 35.192.187.119 # Fix this backend Ip for API calls
  
 
