--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 #specify the mongodb connection string with DB name
-MONGO_URL='mongodb+srv://sekarfeb:maharaja@cluster1.npyvakt.mongodb.net/myThirdDB?retryWrites=true&w=majority'
+MONGO_URL='mongodb://mongodb:27017/myjobdb'
 JWT_SECRET=CgOhCPeskcCVTPlKCBNr3PnFKUXfY5fA
 JWT_LIFETIME=1d
