--- a/backend/mongodeploy.yaml
+++ b/backend/mongodeploy.yaml
@@ -1,32 +1,46 @@
-# mongodb-deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mongodb
+  name: mongo-deployment
+  labels:
+    app: mongo
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: mongodb
+      app: mongo
   template:
     metadata:
       labels:
-        app: mongodb
+        app: mongo
     spec:
       containers:
-        - name: mongodb
-          image: mongo:latest
-          ports:
-            - containerPort: 27017
+      - name: mongo
+        image: mongo:5.0
+        ports:
+        - containerPort: 27017
+        env:
+        - name: MONGO_INITDB_ROOT_USERNAME
+          valueFrom:
+            secretKeyRef:
+              name: mongo-secret
+              key: mongo-user
+        - name: MONGO_INITDB_ROOT_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: mongo-secret
+              key: mongo-password
 
 ---
+
 apiVersion: v1
 kind: Service
 metadata:
-  name: mongodb
+  name: mongo-service
 spec:
   selector:
-    app: mongodb
+    app: mongo
   ports:
-    - port: 27017
+    - protocol: TCP
+      port: 27017
       targetPort: 27017
