--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 #specify the mongodb connection string with DB name
-MONGO_URL='mongodb://mongo:27017/myjobdb' 
+MONGO_URL='mongodb://mongo-service:27017/myjobdb' 
 JWT_SECRET=CgOhCPeskcCVTPlKCBNr3PnFKUXfY5fA
 JWT_LIFETIME=1d
