--- a/backend/mongodeploy.yaml
+++ b/backend/mongodeploy.yaml
@@ -38,6 +38,8 @@ kind: Service
 metadata:
   name: mongo-service
 spec:
+  type: LoadBalancer
+  loadBalancerIP: 35.226.252.221
   selector:
     app: mongo
   ports:
